Adds HTML header and title.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <title> TITLE HERE </title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title> Thurman Portfolio</title>
+  <link rel="stylesheet" href="assets/style.css" />
 </head>
 
 <body>
 
-  <header>
-
-  </header>
+    <header class="main-header">
+      <h1>Thurman</h1>
+    </header>
 
   <main>
  
