Adds navigation links and main body sections.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,49 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <title> Thurman Portfolio</title>
   <link rel="stylesheet" href="assets/style.css" />
+
 </head>
 
 <body>
 
-    <header class="main-header">
-      <h1>Thurman</h1>
-    </header>
+  <header>
+    <h1>Thurman</h1>
+    <nav>
+      <ul>
+        <li><a href="#aboutmesec">About Me</a></li>
+        <li><a href="#worksec">Work</a></li>
+        <li><a href="#contactmesec">Contact Me</a></li>
+        <li><a href="#resumesec">Resume</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
  
+<div id = "aboutmesec" class = "section">
+  <h2>About Me</h2>
+  <p>I am a 34-year old student in a web-development course.</p>
+</div>
+
+<div id = "worksec" class = "section">
+  <h2>Work</h2>
+  <p>Examples of the work I've done.</I></p>
+</div>
+
+<div id = "contactmesec" class = "section">
+  <h2>Contact Me</h2>
+  <p>My contact information.</p>
+</div>
+
+<div id = "resumesec" class = "section">
+  <h2>About Me</h2>
+  <p>My resume</p>
+</div>
+
   </main>
 
   <footer>
