Adds banner image, creates flexboxes for individual sections on page.

--- a/index.html
+++ b/index.html
@@ -24,24 +24,40 @@
   </header>
 
   <main>
- 
-<div id = "aboutmesec" class = "section">
-  <h2>About Me</h2>
-  <p>I am a 34-year old student in a web-development course.</p>
+
+<div style="img">
+<img src= /Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/background-banner.png alt="background banner">
 </div>
 
+<br>
+<div id = "aboutmesec" class = "section">
+  <h2>About Me</h2>
+  <div class="vl"></div>
+  <p>t vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+</div>
+
+<br>
 <div id = "worksec" class = "section">
   <h2>Work</h2>
+  <div class="vl"></div>
   <p>Examples of the work I've done.</I></p>
 </div>
 
+<br>
 <div id = "contactmesec" class = "section">
   <h2>Contact Me</h2>
-  <p>My contact information.</p>
+  <div class="vl"></div>
+  <ul>
+    <li><a href="#">1-555-555-5555</a></li>
+    <li><a href="#">GitHub</a></li>
+    <li><a href="#">Twitter</a></li>
+  </ul>
 </div>
 
+<br>
 <div id = "resumesec" class = "section">
-  <h2>About Me</h2>
+  <h2>Resume</h2>
+  <div class="vl"></div>
   <p>My resume</p>
 </div>
 
