--- a/index.html
+++ b/index.html
@@ -29,22 +29,36 @@
 <img src= /Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/background-banner.png alt="background banner">
 </div>
 
+<section>
+
 <br>
-<div id = "aboutmesec" class = "section">
+<div id = "aboutmesec" class = "sec">
   <h2>About Me</h2>
   <div class="vl"></div>
   <p>t vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
 </div>
 
 <br>
-<div id = "worksec" class = "section">
+<div id = "worksec" class = "sec">
   <h2>Work</h2>
   <div class="vl"></div>
-  <p>Examples of the work I've done.</I></p>
+  
+  <div class="pics">
+    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/synth.jpg" alt="Synthesizer">
+  </div>
+
+  <div class="pics">
+    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/calc.jpg" alt="Calculator">
+  </div>
+
+  <div class="pics">
+    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/random.png" alt="Random Number Generator">
+  </div>
+
 </div>
 
 <br>
-<div id = "contactmesec" class = "section">
+<div id = "contactmesec" class = "sec">
   <h2>Contact Me</h2>
   <div class="vl"></div>
   <ul>
@@ -55,11 +69,13 @@
 </div>
 
 <br>
-<div id = "resumesec" class = "section">
+<div id = "resumesec" class = "sec">
   <h2>Resume</h2>
   <div class="vl"></div>
   <p>My resume</p>
 </div>
+
+</section>
 
   </main>
 
