Adds fade effects to pictures

--- a/index.html
+++ b/index.html
@@ -42,20 +42,26 @@
 <div id = "worksec" class = "sec">
   <h2>Work</h2>
   <div class="vl"></div>
-  
-  <div class="pics">
-    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/synth.jpg" alt="Synthesizer">
-  </div>
 
-  <div class="pics">
+  <div id="pics" class="pictext">
+    
+    <div class="fadein">
     <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/calc.jpg" alt="Calculator">
-  </div>
-
-  <div class="pics">
+    </div>
+    <br>
+    <div class ="bottom-right"><p>Calculator</p></div>
+    <br>
     <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/random.png" alt="Random Number Generator">
-  </div>
+    <br>
+    <div class ="bottom-right"><p>Random Number Generator</p></div>
+    <br>
+    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/synth.jpg" alt="Synthesizer">
+    <br>
+    <div class ="bottom-right"><p>Synthesizer</p></div>
 
-</div>
+    </div>
+
+  </div>
 
 <br>
 <div id = "contactmesec" class = "sec">
