Adds formatting to contact-me section

--- a/index.html
+++ b/index.html
@@ -51,11 +51,17 @@
     <br>
     <div class ="bottom-right"><p>Calculator</p></div>
     <br>
+
+    <div class="fadein">
     <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/random.png" alt="Random Number Generator">
+    </div>
     <br>
     <div class ="bottom-right"><p>Random Number Generator</p></div>
     <br>
+
+    <div class="fadein">
     <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/synth.jpg" alt="Synthesizer">
+    </div>
     <br>
     <div class ="bottom-right"><p>Synthesizer</p></div>
 
@@ -67,18 +73,20 @@
 <div id = "contactmesec" class = "sec">
   <h2>Contact Me</h2>
   <div class="vl"></div>
+  <div class="contactlist">
   <ul>
     <li><a href="#">1-555-555-5555</a></li>
-    <li><a href="#">GitHub</a></li>
+    <li><a href="#https://github.com/skip-thurm">GitHub</a></li>
     <li><a href="#">Twitter</a></li>
   </ul>
+  </div>
 </div>
 
 <br>
 <div id = "resumesec" class = "sec">
   <h2>Resume</h2>
   <div class="vl"></div>
-  <p>My resume</p>
+  <p><a href="#">My resume</a></p>
 </div>
 
 </section>
