--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
   <title> Thurman Portfolio</title>
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="assets/style.css">
 
 </head>
 
@@ -15,7 +15,11 @@
 
   <header>
     <h1>Thurman</h1>
+    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/facepicture.jpeg"
+    width="200"
+    height="250"/>
     <nav>
+
       <ul>
         <li><a href="#aboutmesec">About Me</a></li>
         <li><a href="#worksec">Work</a></li>
