Adds links and iupdates image paths.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header>
     <h1>Thurman</h1>
-    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/facepicture.jpeg"
+    <img src="./assets/images/facepicture.jpeg"
     width="200"
     height="250"/>
     <nav>
@@ -35,7 +35,7 @@
 <!--Banner Image-->
 
 <div style="img">
-<img src= /Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/background-banner.png alt="background banner">
+<img src= ./assets/images/background-banner.png alt="background banner">
 </div>
 
 <!--Links for each section-->
@@ -59,21 +59,21 @@
   <div id="pics" class="pictext">
     
     <div class="fadein">
-    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/calc.jpg" alt="Calculator">
+    <img src="./assets/images/calc.jpg" alt="Calculator">
     </div>
     <br>
     <div class ="bottom-right"><p>Calculator</p></div>
     <br>
 
     <div class="fadein">
-    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/random.png" alt="Random Number Generator">
+    <img src="./assets/images/random.png" alt="Random Number Generator">
     </div>
     <br>
     <div class ="bottom-right"><p>Random Number Generator</p></div>
     <br>
 
     <div class="fadein">
-    <img src="/Users/skipperthurman/bootcamp/module-2-challenge/module-2-challenge/assets/images/synth.jpg" alt="Synthesizer">
+    <img src="./assets/images/synth.jpg" alt="Synthesizer">
     </div>
     <br>
     <div class ="bottom-right"><p>Synthesizer</p></div>
