Changes file path

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header>
     <h1>Thurman</h1>
-    <img src="./images/facepicture.jpeg"
+    <img src="./assets/images/facepicture.jpeg"
     width="200"
     height="250"/>
     <nav>
