--- a/index.html
+++ b/index.html
@@ -5,104 +5,76 @@
 
   <meta charset="UTF-8">
   <title> Thurman Portfolio</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="./assets/style.css">
 
 </head>
 
 <body>
 
-<!--Navigation bar and title-->
+  <!--Navigation bar and title-->
 
   <header>
     <h1>Thurman</h1>
-    <img src="./assets/images/facepicture.jpeg"
-    width="200"
-    height="250"/>
+    <img src="./assets/images/facepicture.jpg" width="200" height="250" />
     <nav>
 
       <ul>
-        <li><a href="#aboutmesec">About Me</a></li>
-        <li><a href="#worksec">Work</a></li>
-        <li><a href="#contactmesec">Contact Me</a></li>
-        <li><a href="#resumesec">Resume</a></li>
+        <li><a href="#aboutmesec">About Me &nbsp</a></li>
+        <li><a href="#worksec">Work &nbsp</a></li>
+        <li><a href="#contactmesec">Contact Me &nbsp</a></li>
+        <li><a href="#resumesec">Resume &nbsp</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
 
+    <!--Links for each section-->
 
-<!--Banner Image-->
+    <section>
 
-<div style="img">
-<img src= ./assets/images/background-banner.png alt="background banner">
-</div>
+      <div id="aboutmesec" class="sec">
+        <h2>About Me</h2>
+        <div class="vl"></div>
+        <p>I live in Arkansas and am a student in a coding boot camp.</p>
+      </div>
 
-<!--Links for each section-->
+      <!--Work section including images for navigation-->
 
-<section>
+      <div class="bigsec">
+        <div id="worksec" class="sec">
+          <h2>Work</h2>
+          <div class="fadein" id="projectbox"><a href="https://sidgray80.github.io/cinemate/">
+              <img id="cinematepic" src="./assets/images/cinematepic.png" alt="Cinemate"></a>
+          </div>
 
-<br>
-<div id = "aboutmesec" class = "sec">
-  <h2>About Me</h2>
-  <div class="vl"></div>
-  <p>t vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
-</div>
+        </div>
+        <ul>
+          <li><a href="https://sidgray80.github.io/cinemate/">Project 1 - Cinemate</a></li>
+        </ul>
 
-<!--Work section including images for navigation-->
+        <div id="contactmesec" class="sec">
 
-<br>
-<div id = "worksec" class = "sec">
-  <h2>Work</h2>
-  <div class="vl"></div>
+          <h2>Contact Me</h2>
 
-  <div id="pics" class="pictext">
-    
-    <div class="fadein">
-    <img src="./assets/images/calc.jpg" alt="Calculator">
-    </div>
-    <br>
-    <div class ="bottom-right"><p>Calculator</p></div>
-    <br>
+          <div class="contactlist">
+            <ul>
+              <li><a href="#">1-555-555-5555</a></li>
+              <li><a href="#https://github.com/skip-thurm">GitHub</a></li>
+              <li><a href="#">Twitter</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-    <div class="fadein">
-    <img src="./assets/images/random.png" alt="Random Number Generator">
-    </div>
-    <br>
-    <div class ="bottom-right"><p>Random Number Generator</p></div>
-    <br>
 
-    <div class="fadein">
-    <img src="./assets/images/synth.jpg" alt="Synthesizer">
-    </div>
-    <br>
-    <div class ="bottom-right"><p>Synthesizer</p></div>
 
-    </div>
+      <div id="resumesec" class="sec">
+        <h2>Resume</h2>
+        <p><a href="#">My resume</a></p>
+      </div>
 
-  </div>
-
-<br>
-<div id = "contactmesec" class = "sec">
-  <h2>Contact Me</h2>
-  <div class="vl"></div>
-  <div class="contactlist">
-  <ul>
-    <li><a href="#">1-555-555-5555</a></li>
-    <li><a href="#https://github.com/skip-thurm">GitHub</a></li>
-    <li><a href="#">Twitter</a></li>
-  </ul>
-  </div>
-</div>
-
-<br>
-<div id = "resumesec" class = "sec">
-  <h2>Resume</h2>
-  <div class="vl"></div>
-  <p><a href="#">My resume</a></p>
-</div>
-
-</section>
+    </section>
 
   </main>
 
