adds new link, changes pictures.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header>
     <h1>Thurman</h1>
-    <img src="./assets/images/facepicture.jpg" width="200" height="250" />
+    <img src="./assets/images/facepicture.jpeg" width="200" height="300" />
     <nav>
 
       <ul>
@@ -42,17 +42,34 @@
       <!--Work section including images for navigation-->
 
       <div class="bigsec">
+
         <div id="worksec" class="sec">
-          <h2>Work</h2>
-          <div class="fadein" id="projectbox"><a href="https://sidgray80.github.io/cinemate/">
-              <img id="cinematepic" src="./assets/images/cinematepic.png" alt="Cinemate"></a>
-          </div>
+          <ul style="list-style: none;">
+            <li>
+              <h2>Work</h2>
+            </li>
+
+            <li>
+              <div class="fadein" id="projectbox"><a href="https://sidgray80.github.io/cinemate/">
+                  <img id="cinematepic" src="./assets/images/cinematepic.png" alt="Cinemate"></a>
+              </div>
+              <ul>
+                <li><a href="https://sidgray80.github.io/cinemate/">Project 1 - Cinemate</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <div class="fadein" id="projectbox"><a href="https://knave-bestiary.herokuapp.com/">
+                  <img id="cinematepic" src="./assets/images/bestiary.png" alt="Bestiary"></a>
+              </div>
+              <ul>
+                <li><a href="https://knave-bestiary.herokuapp.com/">Project 2 - Bestiary</a></li>
+              </ul>
+            </li>
 
         </div>
-        <ul>
-          <li><a href="https://sidgray80.github.io/cinemate/">Project 1 - Cinemate</a></li>
-        </ul>
 
+        </ul>
         <div id="contactmesec" class="sec">
 
           <h2>Contact Me</h2>
@@ -66,7 +83,7 @@
           </div>
         </div>
       </div>
-
+      </div>
 
 
       <div id="resumesec" class="sec">
